<resources>
    <string name="app_name">Local Village</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_services">Service</string>
    <string name="menu_log_in">Login</string>
    <string name="menu_log_out">Logout</string>
    <string name="create_account">Create account</string>
    <string name="login">Login</string>
    <string name="hint_name">enter name</string>
    <string name="hint_email">enter email</string>
    <string name="hint_moblie">enter phone no.</string>
    <string name="hint_pass">enter password</string>
    <string name="edit_profile">Edit profile</string>
    <string name="manage_service">Manage service</string>
    <string name="save_changes">Save Changes</string>
    <string name="hint_county">country</string>
    <string name="hint_village">village/City</string>
    <string name="hint_district">district</string>
    <string name="hint_state">state</string>
    <string name="add_service">Update Service</string>
    <string name="alert_require">require</string>
    <string name="menu_request">Request</string>
    <string name="menu_booking">Booking</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="service_provider">Service Provider</string>
    <string name="book">Book</string>
    <string name="call">Call</string>
    <string name="search">search</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="status">Status</string>
    <string name="cancel">Cancel</string>
    <string name="address">address</string>
</resources>
