<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_nav_home"
            android:title="@string/menu_services" />
        <item
            android:id="@+id/edit_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/edit_profile" />
        <item
            android:id="@+id/nav_booking"
            android:icon="@drawable/ic_action_assignment"
            android:title="@string/menu_booking" />
        <item
            android:id="@+id/nav_request"
            android:icon="@drawable/ic__request"
            android:title="@string/menu_request" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_logIn"
                android:icon="@drawable/ic_action_logout"
                android:title="@string/menu_log_in" />
            <item
                android:id="@+id/nav_logOut"
                android:icon="@drawable/ic_logout1"
                android:title="@string/menu_log_out" />
        </menu>
    </item>

</menu>
