<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_services"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/round_rect"
        android:gravity="center"
        android:hint="@string/hint_county"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/round_rect"
        android:gravity="center"
        android:hint="@string/hint_county"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="10dp" />

    <EditText
        android:id="@+id/editState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/round_rect"
        android:gravity="center"
        android:hint="@string/hint_state"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="10dp" />

    <EditText
        android:id="@+id/editDistrict"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/round_rect"
        android:gravity="center"
        android:hint="@string/hint_district"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="10dp" />

    <EditText
        android:id="@+id/editVillage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/round_rect"
        android:gravity="center"
        android:hint="@string/hint_village"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="10dp" />


</LinearLayout>
